# ihearyou

./: .env.example  README.md  main.py  pyproject.toml
admin/: admin.py  database.py  models.py
backend/: .dockerignore  .env.dev  Dockerfile  aiogram_run.py  bot.py  create_bot.py  docker-compose.prod.yml  docker-compose.yaml  init-db.sql  pyproject.toml  run.py
backend/admin/: __init__.py  admin.py  app.py  auth.py  base.py  config.py  models.py
backend/admin/statics/css/: main.css
backend/admin/templates/sqladmin/: base.html  create.html  details.html  edit.html  layout.html  list.html  login.html
backend/admin/templates/sqladmin/modals/: delete.html  details_action_confirmation.html  list_action_confirmation.html
backend/admin/view/: __init__.py  category.py  content.py  interaction_event.py  question.py  user.py
backend/bot/: __init__.py  app.py  config.py  urls.py
backend/bot/filters/: __init__.py  filters.py
backend/bot/handlers/: __init__.py  admin_handlers.py  callbacks.py  chat_events.py  start.py  user_handlers.py
backend/bot/keyboards/: __init__.py  callbacks.py  main_menu.py
backend/bot/middlewares/: stats.py  users.py
backend/bot/services/: admin_service.py  content_service.py  question_service.py  rating_service.py  reminder_service.py
backend/bot/utils/: __init__.py  message_utils.py  validators.py
backend/data/: admin_panel.py  constants.py  db.py  mixins.py  model_mapping.py  models.py  queries.py
backend/data/fixtures/: initial_data.json  test_questions.json
backend/db_handler/: queries.py  service.py
backend/enums/: fields.py  msg.py
backend/handlers/: callbacks.py  start.py
backend/keybords/: __init__.py  callbacks.py  main_menu.py
backend/stats/: __init__.py  service.py
backend/utils/: logger.py  url_utils.py
bot/: bot.py
core/: admin.py  config.py  constants.py  db.py  logging.py
docker/: docker-compose.yaml  dockerfile
frontend/: package-lock.json  package.json  tsconfig.app.tsbuildinfo
stats/: admin.py  middleware.py  models.py  service.py
