[project]
name = "ihearyou"
version = "1.0.0"
description = "Telegram bot with admin panel"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["telegram", "bot", "fastapi", "admin"]

dependencies = [
    "aiogram==3.2.0",
    "sqlmodel==0.0.14",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "sqladmin==0.21.0",
    "psycopg2-binary==2.9.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
]

[project.scripts]
bot = "bot.bot:main"
admin = "admin.admin:app"